<resources>
    <string name="cardmakemone">办卡赚钱</string>
	<string name="cardmakemone_1">你办卡，我送钱</string>
	<string name="cardmakemone_2">卡收到，通过QQ联系我们</string>
    <string name="dqye">当前余额</string>
	<string name="jrsy">今日收益</string>
	<string name="ljsy">累计收益</string>
	<string name="rmyx">热门游戏</string>
	<string name="xzyx">下载游戏送钱了</string>
	<string name="xgtj">相关推荐:</string>
    <string name="app_name">爱惠</string>
    <string name="ihui">爱惠</string>
    <string name="lockscreen_unlock_label">解锁</string>
    <string name="lockscreen_attention_label">关注</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_update_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_update_loading">下载中...</string>
    <string name="soft_update_pls_wait">请等待...</string>
    <string name="first_special_tip">新用户注册成功将获得5元奖励，验证码将发送到您的手机，请及时填写完成注册！</string>
    <string name="second_special_tip">请务必填写真实的性别、年龄和所在地，以便我们能将屏保图片更加符合您的喜好！</string>
    <string name="share_to_context">爱惠APP是一款安全免费的安卓版手机应用程序，安装后将获得全新的手机屏保背景，滑屏解锁就能赚钱，点击链接可直接下载客户端，http://m.02727.cn:8080/client_download_apk.jsp</string>
    <string name="share_to_without_link_context">爱惠APP是一款安全免费的安卓版手机应用程序，安装后将获得全新的手机屏保背景，滑屏解锁就能赚钱，请到各大应用市场下载使用。</string>
    <string name="loading">疯狂加载中...</string>
    <string name="exit">退出</string>
    <string name="pls_insert_sd_card">请插入外部存储卡</string>
    <string name="page_no_found">网络不给力</string>
    <string name="util_imagepicker_title">图片选择</string>
    <string name="confirm">确定</string>
    <string name="lockscreenservice">爱惠屏保</string>
    <string name="ongoing">正在运行</string>
    <string name="share_to_weixin_timeline">分享到朋友圈</string>
    <string name="share_to_weixin_session">分享给微信好友</string>
    <string name="share_to_qq_session">分享给QQ好友</string>
    <string name="share_to_mms">分享到短信</string>
    <string name="puzzlegamepicker">选择拼图</string>
    <string name="puzzlegame">拼图游戏</string>
    <string name="action_settings">Settings</string>
    <string name="description">background image</string>
    <string name="yonghubanding">用户绑定</string>
    <string name="dengluaihui">登陆爱惠</string>
    <string name="zhuce">注册</string>
    <string name="shurushoujihao">请输入手机号</string>
    <string name="shurushoujqm">请输入邀请码</string>
    <string name="shurumima">请输入密码</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="qingzaicishurumima">请再次输入密码</string>
    <string name="liangcimimabuyiyang">两次密码不一样</string>
    <string name="denglu">登陆</string>
    <string name="_02727_cn">02727.cn</string>
    <string name="shouye">收益</string>
    <string name="tehui">周边</string>
    <string name="fujin">易货</string>
    <string name="fabu">发布宝贝</string>
    <string name="wode">我的</string>
    <string name="wentifankui">问题反馈</string>
    <string name="fanhui">返回</string>
    <string name="aihuigonggao">爱惠公告</string>
    <string name="aihui_app">爱惠是一款安全免费的赚钱应用，通过完成任务可获得不等的现金，现金可用于提现和充话费等其他服务。</string>
    <string name="aihui_app1">爱惠为您免费提供周边实体商家的特惠信息。</string>
    <string name="zhuanqiantiyan">乐享全新，赚钱体验</string>
    <string name="xinshouxuetang">新手学堂</string>
    <string name="hongbao">红包钱匣</string>
    <string name="qianghongbao">限量红包，疯狂来抢</string>
    <string name="youshouhaoqian">游手好钱</string>
    <string name="zhuanjifen">畅想游戏，赚取积分</string>
    <string name="gongyixingdong">爱惠全民公益行动</string>
    <string name="aihuigongyi">三江源生态保护事关中国亚洲、北半球的生态安全和中华民族的长远利益，在当前全球大气...</string>
    <string name="gengduo">更多</string>
    <string name="wancheng">已完成</string>
    <string name="qian">10000,0</string>
    <string name="mubiao">"目标筹资 "</string>
    <string name="huiyoutianxia">惠游天下</string>
    <string name="huanmenpiao">限量门票,免费来兑</string>
    <string name="shanghaiwenquan">青州石镇</string>
    <string name="jiage">票价：￥180</string>
    <string name="jifenduihuan">积分兑换：</string>
    <string name="_4_5">￥4.5</string>
    <string name="_10_01_10_07_">(10月 01日-10月 07日有效)</string>
    <string name="_35_">35%</string>
    <string name="xinshangpin">最新商品</string>
    <string name="dingdan">我的订单</string>
    <string name="shouchang">我的收藏</string>
    <string name="shishangshipin">时尚饰品</string>
    <string name="lipin">精美礼品</string>
    <string name="mianbuhuli">面部护理</string>
    <string name="shentihuli">身体护理</string>
    <string name="xiangshuicaizhuang">香水彩妆</string>
    <string name="jiushuiyinliao">酒水饮料</string>
    <string name="xiuxianshipin">休闲食品</string>
    <string name="zibuyangsheng">滋补养生</string>
    <string name="huwaizhuangbei">户外装备</string>
    <string name="tiyuyongpin">体育用品</string>
    <string name="jianshenxunlian">健身训练</string>
    <string name="yingyouyongpin">婴幼用品</string>
    <string name="ertongwanju">儿童玩具</string>
    <string name="chuangshangyongpin">床上用品</string>
    <string name="shenghuoyongpin">生活用品</string>
    <string name="chufangyongpin">厨房用品</string>
    <string name="shenghuodianqi">生活电器</string>
    <string name="chufangdianqi">厨房电器</string>
    <string name="gerenjiankang">个护健康</string>
    <string name="shumachanpin">数码产品</string>
    <string name="shoujitongxun">手机通讯</string>
    <string name="shoujipeijian">手机配件</string>
    <string name="xingming">xiao_hua</string>
    <string name="zhanghao">账号：</string>
    <string name="_123456">123456</string>
    <string name="wodeyue">我的余额</string>
    <string name="_123">123</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="guanyuaihui">关于爱惠</string>
    <string name="tuijianzhuce">推荐注册</string>
    <string name="shouruxiangqing">收入详情</string>
    <string name="fujinzhaopin">附近招聘</string>
    <string name="wodekaquan">我的卡券</string>
    <string name="pingbaoshezhi">屏保设置</string>
    <string name="xitongtuichu">系统退出</string>
    <string name="aihui">爱惠</string>
    <string name="gongyi">公益</string>
    <string name="shiyongxuzhi">使用须知</string>
    <string name="yonghuxieyi">用户协议</string>
    <string name="banbenxinxi">版本信息</string>
    <string name="lianxiwomen">联系我们</string>
    <string name="wodedingdan">我的订单</string>
    <string name="lvyou">旅游</string>
    <string name="zhaohuimima">找回密码</string>
    <string name="shuruyanzhengma">请输入您收到的验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="xiayibu">下一步</string>
    <string name="shezhimima">设定密码（使用6-10位数字）</string>
    <string name="shezhimima1">再次输入密码</string>
    <string name="tijiao">提交</string>
    <string name="shangcheng">周边</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="yonghuzhuce">用户注册</string>
    <string name="zhucetishi">请务必填写真实性别，年龄，所在地，以便我们能将锁屏图片更加符合你的喜好。</string>
    <string name="nicheng">昵称</string>
    <string name="nianling">年龄</string>
    <string name="shurudizhi">请输入所在地</string>
    <string name="tishi">提示：没有开通的城市，请选择最近城市</string>
    <string name="wanchengzhuce">完成注册</string>
    <string name="xitongtongzhi">系统通知</string>
    <string name="zhucejiangli">新用户注册界面注册成功获得0.1元奖励，验证码将发到您的手机，请及时填写完成注册！</string>
    <string name="yuedutongyi">我以阅读并同意</string>
    <string name="fuwuxieyi">爱惠服务协议</string>
    <string name="kaiqipingbao">开启屏保</string>
    <string name="zhuanzhangmingxi">转账明细</string>
    <string name="shoujihaoma">手机号码</string>
    <string name="xingbie">性别</string>
    <string name="mima">密码</string>
    <string name="suozaichengshi">所在城市</string>
    <string name="genggaigerenxinxi">更改个人信息</string>
    <string name="jiesuoshouru">解锁收入</string>
    <string name="guanzhushouru">关注收入</string>
    <string name="gongyijuankuan">公益捐助</string>
    <string name="xinxixiugai">信息修改</string>
    <string name="shurusuozaidi">请输入所在地</string>
    <string name="shiguofan">食锅饭</string>
    <string name="juli">距离:</string>
    <string name="shiguofanjuli">40.95公里</string>
    <string name="dizhi">地址:</string>
    <string name="shiguofandizhi">上海市松江区求仁路412号</string>
    <string name="niurenzizhuhuoguo">牛人自助纸时尚火锅</string>
    <string name="niurenzizhuhuoguojuli">距离:1.52公里</string>
    <string name="niurenzizhuhuoguodizhi">地址:杨浦区荆州路266号长阳路路口</string>
    <string name="huolalaxiangcaiguan">火辣辣湘菜馆</string>
    <string name="huolalaxiangcaiguanjuli">距离:3.67公里</string>
    <string name="huolalaxiangcaiguandizhi">地址:上海市杨浦区翔殷路934号</string>
    <string name="guozhimanman">果之满满</string>
    <string name="guozhimanmanjuli">距离:5.52公里</string>
    <string name="guozhimanmandizhi">地址:上海市浦东新区富城路99号B1楼05单元</string>
    <string name="jiayansifangcai">家宴私房菜</string>
    <string name="jiayansifangcaijuli">距离:6.01公里</string>
    <string name="jiayansifangcaidizhi">地址:闸北区柳营路518号</string>
    <string name="malayouhuo">麻辣诱惑</string>
    <string name="malayouhuojuli">距离:11.79公里</string>
    <string name="malayouhuodizhi">地址:长宁区长宁路1018号龙之梦购物中心7楼7211号铺</string>
    <string name="xufuniu">许府牛</string>
    <string name="xufuniujuli">距离:76.43公里</string>
    <string name="xufuniudizhi">地址:南通市海门市商业步行街12号</string>
    <string name="duolunduofengqingzhizhucan">多伦多风情自助餐厅</string>
    <string name="duolunduofengqingzhizhucanjuli">距离:98.20公里</string>
    <string name="duolunduofengqingzhizhucandizhi">地址:南通市崇川区桃园路中南城购物中心5楼</string>
    <string name="maizhelunhaiyanzizhucanting">麦哲伦海鲜自助餐厅</string>
    <string name="maizhelunhaiyanzizhucantingjuli">距离:98.20公里</string>
    <string name="maizhelunhaiyanzizhucantingdizhi">地址:南通市崇川区桃园路12号</string>
    <string name="keliyahanguozizhushaokao">可立亚韩国自助烧烤</string>
    <string name="keliyahanguozizhushaokaojuli">距离:102.19公里</string>
    <string name="keliyahanguozizhushaokaodizhi">地址:南通市崇川区教育路1号2楼</string>
    <string name="dezhuanghuoguo">德庄火锅</string>
    <string name="dezhuanghuoguojuli">距离:103.58公里</string>
    <string name="dezhuanghuoguodizhi">地址:南通市崇川区青年西路12号</string>
    <string name="shaodongxiaozhu">邵東小猪猪烤肉餐厅</string>
    <string name="shaodongxiaozhujuli">距离:103.88公里</string>
    <string name="shaodongxiaozhudizhi">地址:南通市崇川区南大街文峰大世界8楼</string>
    <string name="haishawanhaiyanggun">海鲨湾海鲜馆</string>
    <string name="haishawanhaiyanggunjuli">距离:104.47公里</string>
    <string name="haishawanhaiyanggundizhi">地址:南通市崇川区长江中路88号</string>
    <string name="jinrijifen">今日收益(元)</string>
    <string name="_6277">14.56</string>
    <string name="leijijifen">累计收益(元)</string>
    <string name="jifengonglue">爱转钱</string>
    <string name="jinrirenwu">提现金</string>
    <string name="youxi">兑话费</string>
    <string name="_21100">86.07</string>
    <string name="youhuiquan">优惠券</string>
    <string name="renwu">今日任务</string>
    <string name="wanchengrenwu">赶快去下载游戏赚钱吧</string>
    <string name="xinyongka">民生信用卡</string>
    <string name="mingzi_name">小明</string>
    <string name="haoma">手机号：</string>
    <string name="shoujihao">123456789</string>
    <string name="quanbudingdan">全部订单</string>
    <string name="dingdanjilu">查看全部已兑订单</string>
    <string name="jifenmingxi">积分明细</string>
    <string name="ic_wode">我的宝贝</string>
    <string name="ic_shoucang">我的收藏</string>
    <string name="kaquanshijian">卡券快过期了呃</string>
    <string name="aihuijishifang">愛惠及四方</string>
    <string name="pingbaokaiguan">屏保开关</string>
    <string name="genghuanzhanghao">更换账号</string>
    <string name="_12345678900">12345678900</string>
    <string name="dangqian">当前账号</string>
    <string name="zhucechengong">注册成功</string>
    <string name="second">秒</string>
    <string name="erweima">扫描二维码下载爱惠</string>
    <string name="tv_biaoti">宝贝名称</string>
    <string name="fabuxinxi">描述一下你的宝贝</string>
    <string name="tv_jiage">价格：</string>
    <string name="_0_00">0.00</string>
    <string name="et_dizhi">地址：</string>
    <string name="et_xiangxidizhi">请填写好你的详细地址</string>
    <string name="lianxifangshi">联系方式：</string>
    <string name="tianxielianxifangshi">请填写好你的联系方式</string>
    <string name="lijifabu">立即发布</string>
</resources>