<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel_layout_fujin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center" >

        <ImageView
            android:id="@+id/use_image_aihui1"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/description" />

        <TextView
            android:id="@+id/tv_user_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/use_image_aihui1"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/use_image_aihui1"
            android:text="@string/shiguofan"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_name1"
            android:layout_below="@id/tv_user_name1"
            android:layout_marginTop="5dp"
            android:text="@string/juli"
            android:textColor="#888"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_name1"
            android:layout_below="@id/text_textView2"
            android:layout_marginTop="5dp"
            android:text="@string/dizhi"
            android:textColor="#888"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_text_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_text"
            android:layout_alignBottom="@+id/tv_text"
            android:layout_toRightOf="@+id/text_textView2"
            android:text="@string/shiguofandizhi"
            android:textColor="#888"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_create_at1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_textView2"
            android:layout_alignBottom="@+id/text_textView2"
            android:layout_toRightOf="@+id/text_textView2"
            android:text="@string/shiguofanjuli"
            android:textColor="#888"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>