<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview_show"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/shouruxiangqing"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/description"
            android:src="@drawable/com_hzjstudio__ihui_left1" />

        <TextView
            android:id="@+id/textview_fanhui1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:text="@string/fanhui"
            android:textColor="#000000"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/balck_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/jiesuoshouru"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_jiesuoshouru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/_123"
            android:textColor="#CD3700" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/balck_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/guanzhushouru"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_guanzhushouru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/_123"
            android:textColor="#CD3700" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/balck_gray" />

    <RelativeLayout
        android:id="@+id/rel_zhuanzhangmingxi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/description"
            android:src="@drawable/com_hzjstudio__ihui_zz_002" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/zhuanzhangmingxi"
            android:textColor="#333"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/balck_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/com_hezistudio_ihui_er" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erweima"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>