<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/transparent" >

        <TextView
            android:id="@+id/tv_msg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/fabu"
            android:textColor="@color/text_num_gray"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/description"
            android:src="@drawable/com_hzjstudio__ihui_left1" />

        <TextView
            android:id="@+id/fabu_fanhui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:text="@string/fanhui"
            android:textColor="#000000"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/balck_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_biaoti"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/tv_biaoti"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/balck_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_miaoshu"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/fabuxinxi"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

                <GridView
                    android:id="@+id/noScrollgridview"
                    android:layout_width="230dp"
                    android:layout_height="73dp"
                    android:layout_marginLeft="5dp"
                    android:horizontalSpacing="3dp"
                    android:listSelector="#00000000"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:verticalSpacing="5dp" >
                </GridView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/balck_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="6dp"
                android:background="@color/balck_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tv_jiage"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_jiage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="01234567890."
                    android:hint="@string/_0_00"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/balck_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/et_dizhi"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_dizhi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/et_xiangxidizhi"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/balck_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lianxifangshi"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_lianxifangshi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/tianxielianxifangshi"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/balck_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </LinearLayout>

            <Button
                android:id="@+id/btn_fabu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style_fabu"
                android:text="@string/lijifabu" />

</LinearLayout>